changing the entire look of the website(for a more professional and cool looking design): inspired also by the vuejs.org site

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: auto;
+  background-color: var(--default-background);
 }
 
 @media (min-width: 3000px) {
