--- a/src/style/InitialPage.css
+++ b/src/style/InitialPage.css
@@ -15,7 +15,7 @@
   font-family: var(--titles-font-family);
   background: linear-gradient(
     to top right,
-    black 25%,
+    white 25%,
     var(--main-theme),
     var(--light-shade)
   );
@@ -29,7 +29,7 @@
   padding-bottom: 4px;
   font-size: 4rem;
   font-weight: 1000;
-  background-image: linear-gradient(#000 0 0);
+  background-image: linear-gradient(#fff 0 0);
   background-position: 0 100%;
   background-size: 0% 2px;
   background-repeat: no-repeat;
