--- a/src/style/vars.css
+++ b/src/style/vars.css
@@ -1,5 +1,10 @@
 * {
-  --words-color: black;
+  --default-background: #1a1a1a;
+  --landing-color: #d4af37;
+  --text-color: white;
+  --default-font: "Inter,-apple-system, BlinkMacSystemFont, " Segoe UI
+    ", Roboto, Oxygen, Ubuntu, Cantarell, " Fira Sans ", " Droid Sans ", "
+    Helvetica Neue ", sans-serifSF Pro";
   --initial-page-color: white;
   --titles-font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica",
     "Arial", sans-serif "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -14,4 +19,6 @@
     var(--main-theme) 40%,
     white
   );
+  color: var(--text-color);
+  font-family: var(--default-font);
 }
