--- a/src/style/vars.css
+++ b/src/style/vars.css
@@ -1,5 +1,6 @@
 * {
   --default-background: #1a1a1a;
+  --card-color: #484848;
   --landing-color: #d4af37;
   --text-color: white;
   --default-font: "Inter,-apple-system, BlinkMacSystemFont, " Segoe UI
