--- a/src/style/Reference.css
+++ b/src/style/Reference.css
@@ -1,21 +1,23 @@
 @import url("./vars.css");
 @import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 
 .reference {
   flex-wrap: wrap;
-  max-width: 100vw;
-  padding: 5vw;
+  max-width: 90vw;
+  /* padding: 5vw; */
 }
 
 .reference h1 {
   color: black;
-  /* width: 100%; */
+  width: 100%;
   display: flex;
-  justify-content: center;
-  text-align: flex-start;
-  padding-bottom: 2rem;
-  padding-top: 1.5rem;
+  justify-content: flex-start;
+  margin-left: 4vw;
+  border-bottom: 3px solid var(--light-shade);
+  /* padding-bottom: 2rem;
+  padding-top: 1.5rem; */
+  padding: 0;
+  height: fit-content;
   font-size: 5rem;
   background: linear-gradient(
     to top right,
@@ -25,7 +27,7 @@
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  /* font-family: var(--title-font-family); */
+  font-family: var(--title-font-family);
   /* box-shadow: 0 0 1rem gray; */
   font-weight: bolder;
   /* text-transform: uppercase; */
@@ -34,6 +36,7 @@
 }
 
 .reference p {
+  margin-left: 4vw;
   font-size: 1.5rem;
   width: 100%;
 }
@@ -63,17 +66,10 @@
   .reference h1 {
     transition: 0.2s;
     font-size: 1rem;
-    box-shadow: none;
   }
   .reference p,
   .reference i {
     transition: 0.2s;
     font-size: 0.5rem;
-  }
-}
-
-@media (max-width: 150px) {
-  .reference h1 {
-    border-radius: 0;
   }
 }
