--- a/src/style/Menu.css
+++ b/src/style/Menu.css
@@ -34,6 +34,7 @@
 
 .btn--active {
   background-color: var(--card-color) !important;
+  color: var(--light-shade) !important;
 }
 
 .btn--close-menu {
