--- a/src/style/ProjectsSkillsPage.css
+++ b/src/style/ProjectsSkillsPage.css
@@ -24,15 +24,15 @@
 
 .project-card,
 .skill-card {
-  padding: 0.5vw;
+  /* padding: 0.5vw; */
   margin: 2rem;
   flex-wrap: wrap;
   background-color: var(--card-color);
   /* box-shadow: 0 1px 10px 1px gray; */
-  /* border-radius: 5px; */
-  width: 20rem;
-  min-width: 20rem;
-  height: 40rem;
+  border-radius: 2rem;
+  width: 40rem;
+  min-width: 40rem;
+  height: fit-content;
   overflow: auto;
   transition: 0.2s;
 }
